--- a/scripts/install-info.8
+++ b/scripts/install-info.8
@@ -118,6 +118,12 @@ replaced in situ with the new entry.
 
 If a section is specified when removing an entry the section is
 ignored and a warning is issued.
+
+If a section is requested when adding an entry but the file contains
+no section headings at all then
+.B install-info
+will create both the requested section and a Miscellaneous section at
+the end of the file.
 .TP
 .BI \-\-infodir= infodir
 Specifies that the
