--- a/TODO
+++ b/TODO
@@ -1,17 +1,9 @@
 Here are some currently-known inadequacies:
 
 urgent
- * Pre-Depends installation ordering
-
-done
- * a.out version
- * uncomment ELF preinst modification
- * Replaces (auto-deselect for conflicts)
- * Replaces (don't overwrite otherwise)
- * compile with ELF GCC out of the box
- * dpkg --print-architecture
- * Architecture field check
- * symlink rename change
+ * Conflicts << installation ordering
+ * Version numbers in pre-depends stuff
+ * Search for all pre-depends things at once, bomb out if any not found
 
 bugs that need to be fixed quickly
  * version numbers not starting digit early.
@@ -32,9 +24,11 @@ bugs that need to be fixed quickly
  * remove old docs from /usr/doc/dpkg.
 
 other stuff unlikely to get done soon
+ * md5sum component in new .deb files
+ * version number comparison option
+ * diversions list as control archive entry
  * single maintainer script, and new package getting there first
  * dpkg -s show something for virtual packages
- * dpkg --listfiles should do better for multi-package files  (pkg, pkg: ...)
  * settable defaults for update-rc.d
  * local conffiles
  * hooks
@@ -55,3 +49,15 @@ other stuff unlikely to get done soon
  * `fake' or `null' packages
  * --purge remove empty directories which used too contain conffiles
  * conffiles handling options, including `replace removed files'
+
+done
+ * Pre-Depends installation ordering
+ * a.out version
+ * uncomment ELF preinst modification
+ * Replaces (auto-deselect for conflicts)
+ * Replaces (don't overwrite otherwise)
+ * compile with ELF GCC out of the box
+ * dpkg --print-architecture
+ * Architecture field check
+ * symlink rename change
+ * dpkg --listfiles should do better for multi-package files  (pkg, pkg: ...)
