dpkg (1.2.1); priority=MEDIUM
  * `=' key in dselect really does `hold' rather than `unhold'.
  * dselect dependency processing now interacts better with `hold'.
  * dselect `I' key (not `i') modifies display of the info window.
  * dselect shows unavailable packages as being unavailable.
  * dselect main menu headings and many other strings changed to try to
    discourage people from deselecting every package and using [R]emove.
    Notably, `select' changed to `mark' throughout.

  * dselect disk methods now print a few fewer double slashes.
  * dselect disk access methods will offer to use dpkg --record-avail
    to scan the available packages, if no Packages file is found.

  * New dpkg --compare-versions option, for the benefit of scripts &c.
  * New dpkg --clear-avail option forgets all available packages info.
  * New dpkg --print-avail option, prints `available' data (from Packages, &c).
  * dpkg usage message is more informative, but no longer fits on screen.
  * dpkg --avail option renamed --record-avail.

  * Latest dpkg-name from Erick Branderhorst.
  * dpkg-scanpackages has more sensible problem reporting.
  * postinst configure now gets null argument (not <unknown> or <none>)
    when there is no previously configured version.

  * Guidelines say that postinst configure is given previous version.
  * Guidelines don't refer to maintainer-script-args.txt in main text.
  * Guidelines (Texinfo source) uploaded separately.

  * Own version of strcpy (used for debugging) removed.
  * Interface to access methods document in source (doc/dselect-methods.txt).
  * debian.buildscript moves changes file into parent directory.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Wed, 22 May 1996 01:26:31 +0100

--- a/TODO
+++ b/TODO
@@ -4,9 +4,6 @@ urgent
  * Conflicts << installation ordering
  * Version numbers in pre-depends stuff
  * Search for all pre-depends things at once, bomb out if any not found
-
-bugs that need to be fixed quickly
- * version numbers not starting digit early.
  * check description in dpkg-deb
  * field overflow in dpkg --list
  * _always_ show section in --yet-to-unpack
@@ -16,7 +13,6 @@ bugs that need to be fixed quickly
  * Several things ought to be configurable but aren't.
  * Filenames containing newlines.  Conffile names containing spaces.
  * dpkg --status for virtual packages
- * dselect bottom window too large, and/or resize
  * update-alternatives prompting.
  * logging, both transcript logs (kept briefly)
    and action logs (kept forever?)  957
@@ -24,10 +20,10 @@ bugs that need to be fixed quickly
  * remove old docs from /usr/doc/dpkg.
 
 other stuff unlikely to get done soon
+ * understand Replaces in dselect
  * provide way for package to declare ownership of files for dpkg -S
    and -L without having dpkg act on this
  * md5sum component in new .deb files
- * version number comparison option
  * diversions list as control archive entry
  * single maintainer script, and new package getting there first
  * dpkg -s show something for virtual packages
@@ -43,16 +39,17 @@ other stuff unlikely to get done soon
  * start-stop-daemon in C. 1670
  * dselect per-half focus and keybindings improvements. 1555
  * floppy map (where are the files)
- * highlight or pre-sort or something new or changed packages,
-   during upgrade selection.
  * how to change case of package names
  * support for adding files to dpkg's file lists
- * side-by-side version display
  * `fake' or `null' packages
  * --purge remove empty directories which used too contain conffiles
  * conffiles handling options, including `replace removed files'
 
 done
+ * highlight or pre-sort or something new or changed packages,
+   during upgrade selection.
+ * side-by-side version display
+ * version number comparison option
  * Pre-Depends installation ordering
  * a.out version
  * uncomment ELF preinst modification
@@ -63,3 +60,7 @@ done
  * Architecture field check
  * symlink rename change
  * dpkg --listfiles should do better for multi-package files  (pkg, pkg: ...)
+
+obsoleted so not done
+ * version numbers not starting digit early.
+ * dselect bottom window too large, and/or resize
