dpkg (1.2.8); priority=LOW
  * dpkg --record-avail puts data in Size field.
  * strip / for rmdir(2) in cleanup to work around kernel bug.  (Bug#3275.)
  * dpkg-split --msdos no longer allows `-' and other chars in filenames.

  * manual dpkg-split(8) written.
  * dpkg-split minor typo in --auto usage error message fixed.
  * dpkg-deb(8) very minor cosmetic fix to --build option.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Tue, 25 Jun 1996 03:00:14 +0100

--- a/dpkg-deb/dpkg-deb.8
+++ b/dpkg-deb/dpkg-deb.8
@@ -48,7 +48,7 @@ will spot that you wanted
 and run it for you.
 .SH ACTION OPTIONS
 .TP
-.BR -b ", " --build
+.BR --build ", " -b
 Creates a debian archive from the filesystem tree stored in
 .IR directory ".  " directory
 must have a
