dpkg (1.2.12); priority=LOW
  * dpkg --search and --list understand and comment on diversions.
  * dpkg-divert displays diversions more intelligibly.

  * Guidelines are somewhat clearer about descriptions.
  * deb(5) describes new format; old moved to deb-old(5).  (Bug#3435.)
  * deb-control(5) carries a warning about being out of date.

  * Added 1996 to dselect version/copyright.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Thu, 4 Jul 1996 15:04:49 +0100

--- a/doc/deb-control.5
+++ b/doc/deb-control.5
@@ -6,6 +6,8 @@
 deb\-control \- Debian GNU/Linux packages' master control file format
 .SH SYNOPSIS
 control
+.SH WARNING
+.I This manual page is very out of date.
 .SH DESCRIPTION
 Master control file format:
 .LP
