--- a/doc/guidelines.texi
+++ b/doc/guidelines.texi
@@ -1239,6 +1239,8 @@ Description: <single line synopsis>
  <extended description over several lines>
 @end smallexample
 
+Every package should have an extended description.
+
 The extended description has several kinds of line:
 
 @itemize @bullet
@@ -1299,6 +1301,13 @@ synopsis line - make it as informative as you can.
 The extended description should describe what the package does and how
 it relates to the rest of the system (in terms of, for example, which
 subsystem it is which part of).
+
+The blurb that comes with a program in its announcements and/or
+@file{README} files is rarely suitable for use in a description field.
+It is usually aimed at people who are already in the community where the
+package is used.  The @code{Description} field needs to make sense to
+anyone, even people who have no idea about any of the things the package
+deals with.
 
 @item
 Put important information first, both in the synopis and extended
