dpkg (1.3.0) experimental; urgency=LOW
  * dpkg can install named pipes.
  * dpkg-deb supports directory for destination, generates filename.
  * dpkg-{source,gencontrol,genchanges,parsechangelog,buildpackage},
    dpkg-distaddfile scripts to support new source package format.
  * a.out build no longer supported.
  * Changed to new source package format.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Tue, 6 Aug 1996 02:31:52 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-dpkg (1.2.14) stable unstable; urgency=MEDIUM
+dpkg (1.3.0) experimental; urgency=LOW
 
-  * dselect +/-/_/= on lines for all broken, new, local or whatever
-    packages do not affect _all_ packages.  (Bug#4129.)
+  * dpkg can install named pipes.
+  * dpkg-deb supports directory for destination, generates filename.
+  * dpkg-{source,gencontrol,genchanges,parsechangelog,buildpackage},
+    dpkg-distaddfile scripts to support new source package format.
+  * a.out build no longer supported.
+  * Changed to new source package format.
 
- -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Thu, 22 Aug 1996 00:39:52 +0100
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Tue, 6 Aug 1996 02:31:52 +0100
 
 dpkg (1.2.13) unstable; urgency=LOW
 
