--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+dpkg (1.3.1) experimental; urgency=LOW
+
+  * manpage for dpkg-source et al now available.
+  * dpkg-changelog-mode.el installed in site-lisp, but still no autoload.
+
+  * dpkg-source prints correct string for not-understood tar -vvt output.
+  * dpkg-source parsing of tar -vvt output made more robust.
+
+  * dpkg-buildpackage prints usage message on usage error.
+  * dpkg-gencontrol can print usage message.
+  * -T<varlistfile> option added to dpkg-source.
+  * Description of -f<fileslistfile> corrected in dpkg-distaddfile usage.
+  * -m<maintainer> synopsis changed in dpkg-genchanges usage.
+  * debian/substvars may now contain blank lines.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Thu, 8 Aug 1996 02:36:04 +0100
+
 dpkg (1.3.0) experimental; urgency=LOW
 
   * dpkg can install named pipes.
@@ -1519,3 +1536,7 @@ Thu Aug 25 11:46:27 1994  Ian Murdock  (imurdock@debra.debian.org)
         link never being removed at all.
 
 ChangeLog begins Thu Aug 25 11:46:27 1994 for dpkg 0.93.5.
+
+Local variables:
+mode: dpkg-changelog
+End:
