dpkg (1.3.2) experimental; urgency=LOW (MEDIUM for dpkg-source)
  * Faster update-rc.d written in Perl by Miquel van Smoorenburg.
  * install-info --test doesn't lock dir.  (Bug#3992, thanks Darren).

  * dpkg-source doesn't break in the presence of any symlinks.

  * More developers' keys added to doc/developer-keys.pgp.
  * Install developers' keys in /usr/doc/dpkg/developer-keys.pgp.
  * dpkg-source documents undefined substvar behaviour.
  * minor debian/rules cleanups.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 10 Aug 1996 02:13:47 +0100

--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -345,6 +345,9 @@ file will change too.
 .TP
 .BR newline ", " space ", " tab
 These variables each hold the corresponding character.
+
+If a variable is referred to but not defined it generates a warning
+and an empty value is assumed.
 .SH FILES
 .TP
 .B debian/control
