dpkg (1.3.3) experimental; urgency=low
  * Programmers' & policy manuals in source tree; HTML in /usr/doc/dpkg.
  * Old guidelines.info and text files in /usr/doc/dpkg removed.

  * dpkg-source sets permissions on extracted debianised source tree
    and does not copy ownerships out of archive even if running as root.

  * Emacs mode `dpkg changelog' renamed to `Debian changelog'.
  * Default changelog format renamed from `dpkg' to `debian'.

  * debian-changelog-mode sets fill-prefix correctly.
  * debian-changelog-mode urgencies except HIGH lowercase by default.
  * debian-changelog-mode displays keymap in doc string and so mode help.

  * More maintainers' PGP keys.

  * Remove built changelog parsers with `clean' target in source.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 10 Aug 1996 23:35:51 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+dpkg (1.3.3) experimental; urgency=low
+
+  * Programmers' & policy manuals in source tree; HTML in /usr/doc/dpkg.
+  * Old guidelines.info and text files in /usr/doc/dpkg removed.
+
+  * dpkg-source sets permissions on extracted debianised source tree
+    and does not copy ownerships out of archive even if running as root.
+
+  * Emacs mode `dpkg changelog' renamed to `Debian changelog'.
+  * Default changelog format renamed from `dpkg' to `debian'.
+
+  * debian-changelog-mode sets fill-prefix correctly.
+  * debian-changelog-mode urgencies except HIGH lowercase by default.
+  * debian-changelog-mode displays keymap in doc string and so mode help.
+
+  * More maintainers' PGP keys.
+
+  * Remove built changelog parsers with `clean' target in source.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 10 Aug 1996 23:35:51 +0100
+
 dpkg (1.3.2) experimental; urgency=LOW (MEDIUM for dpkg-source)
 
   * Faster update-rc.d written in Perl by Miquel van Smoorenburg.
@@ -1552,5 +1573,5 @@ Thu Aug 25 11:46:27 1994  Ian Murdock  (imurdock@debra.debian.org)
 ChangeLog begins Thu Aug 25 11:46:27 1994 for dpkg 0.93.5.
 
 Local variables:
-mode: dpkg-changelog
+mode: debian-changelog
 End:
