--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dpkg (1.3.4) experimental; urgency=low
+
+  * Removed debugging output from dpkg-source -x.  Oops.
+  * Removed section on source package permissions from policy manual -
+    dpkg-source now sorts these out.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sun, 11 Aug 1996 13:25:44 +0100
+
 dpkg (1.3.3) experimental; urgency=low
 
   * Programmers' & policy manuals in source tree; HTML in /usr/doc/dpkg.
