--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+dpkg (1.3.5) experimental; urgency=low (high for debian-changelog-mode)
+
+  * 822-date script included.  (Bug#4136.)
+  * debian-changelog-add-version works on empty file.
+  * debian-changelog-mode mode-help works properly.
+
+  * dpkg-source tells patch not to make numbered backups.  (Bug#4135.)
+
+  * More developers' PGP keys.
+  * Paragraph on uucp -a and -g options removed from policy manual.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Wed, 14 Aug 1996 14:46:47 +0100
+
 dpkg (1.3.4) experimental; urgency=low
 
   * Removed debugging output from dpkg-source -x.  Oops.
